--- a/npneq-master.bib
+++ b/npneq-master.bib
@@ -2966,6 +2966,12 @@ year = {2019}
 %PLEASE PUT REFERENCES ALPHABETICALLY
 
 
+@online{dongarra500,
+    author = "Jack Dongarra",
+    title = "Jack Dongarra",
+    url  = "https://www.top500.org/project/authors/jack-dongarra/",
+    keywords = "Dongarra, TOP500"
+}
 
 
 
